deployments/assetmgrms-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: asset-mgr-ms-svc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    chart: asset-mgr-ms
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: asset-mgr-ms
